--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,46 @@
+asgiref==3.4.1
+attrs==20.3.0
+autopep8==1.6.0
+beautifulsoup4==4.10.0
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.6
+check50==3.3.4
+click==8.0.1
+cryptography==35.0.0
+cs50==7.0.2
+dj-database-url==0.5.0
 Django==4.0
+django-heroku==0.3.1
+docopt==0.6.2
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.1
+idna==3.2
+itsdangerous==2.0.1
+jellyfish==0.8.8
+Jinja2==3.0.1
+lib50==3.0.3
+markdown2==2.4.1
+MarkupSafe==2.0.1
+optional-django==0.3.0
+pexpect==4.8.0
+pipreqs==0.4.11
+psycopg2==2.9.3
+ptyprocess==0.7.0
+pycodestyle==2.8.0
+pycparser==2.20
+pytz==2021.3
+PyYAML==5.4.1
+react==4.3.0
+requests==2.26.0
+soupsieve==2.2.1
+SQLAlchemy==1.4.25
+sqlparse==0.4.2
+submit50==3.1.0
+termcolor==1.1.0
+toml==0.10.2
+urllib3==1.26.7
+Werkzeug==2.0.1
+whitenoise==6.2.0
+yarg==0.1.9
